--- a/ibm_mrs_downloader/.gitignore
+++ b/ibm_mrs_downloader/.gitignore
@@ -14,6 +14,8 @@
 !requirements_playwright.txt
 !README.md
 !.gitignore
+!local_assets/
+!local_assets/**
 
 # Ignore downloaded binaries and temp files
 chrome/
