feat: Introduce `bfftool.py` for AIX BFF package version extraction and add project `.gitignore`.

--- a/ibm_mrs_downloader/.gitignore
+++ b/ibm_mrs_downloader/.gitignore
@@ -2,16 +2,13 @@
 *
 
 # Whitelist specific files
+!bfftool.py
 !ibm_mrs_downloader.py
-!ibm_mrs_downloader_playwright.py
 !setup_chrome.py
 !setup_playwright.py
 !run_windows.bat
 !run_linux.sh
-!run_playwright_windows.bat
-!run_playwright_linux.sh
 !requirements.txt
-!requirements_playwright.txt
 !README.md
 !.gitignore
 !local_assets/
