feat: Add `excluded_versions.ini` to define excluded IBM MRS package versions.

--- a/ibm_mrs_downloader/excluded_versions.ini
+++ b/ibm_mrs_downloader/excluded_versions.ini
@@ -24,7 +24,9 @@
 openssl = 1.*;2.*;20.*;3.5.*
 
 # OpenSSH: przykład – wyklucz bardzo stare wersje (odkomentuj żeby aktywować)
-openssh = 7.*;8.0.*
+openssh = 6.*7.*;8.0.*
+nas = 1.4.*;1.5.*;1.6.*
+lsof = 4.82;4.85;4.89
 
 # RPM: przykład
 # rpm = 3.*
